utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeIncludedModule3.ide
package invalid

typedef module ExcludeIncludedModule3 {

}
